<resources>
    <string name="app_name">Contacts</string>
    <string name="cancel_button">취소</string>
    <string name="save_button">저장</string>
    <string name="toast_cancel">취소 되었습니다</string>
    <string name="memoInputHint">메모</string>
    <string name="male_button">남성</string>
    <string name="female_button">여성</string>
    <string name="genderInputHint">성별</string>
    <string name="birthdayInputHint">생일</string>
    <string name="more_button">더보기</string>
    <string name="mailInputHint">메일</string>
    <string name="contactInputHint">전화번호</string>
    <string name="nameInputHint">이름</string>
    <string name="onCancel">취소 되었습니다</string>
    <string name="onSave">저장이 완료 되었습니다</string>
    <string name="onSaveFail">이름, 전화번호는 필수 항목입니다</string>
</resources>